--- a/src/features/review/Review.css
+++ b/src/features/review/Review.css
@@ -42,9 +42,25 @@
   margin-right: 32px;
 }
 
-.image {
-  width: 200px;
-  height: 200px;
+.avatar-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  padding: 8px;
+
+  background: #fff;
+  border: 2px solid #666;
+  color: #666;
+  text-align: center;
+
+  font: 75px Arial, sans-serif;
 }
 
 .image-name {
@@ -80,7 +96,7 @@
   display: block;
   font-weight: bold;
   line-height: 20px;
-
+  width: 150px;
   background: #cde4ff;
   border-radius: 8px;
   margin-top: 28px;
